# vart

./: .clang-format  .gitignore  CMakeLists.txt  Copyright.txt  cmake.sh
.github/: CODEOWNERS
async-runner/: CMakeLists.txt
async-runner/src/: async_runner.cpp  async_runner.hpp  batch_tensor_buffer.cpp  batch_tensor_buffer.hpp
buffer-object/: CMakeLists.txt
buffer-object/src/: buffer_object.cpp  buffer_object_dpcma.cpp  buffer_object_dpcma.hpp  buffer_object_fd.cpp  buffer_object_fd.hpp  buffer_object_map.cpp  buffer_object_map.hpp  buffer_object_qnx.cpp  buffer_object_qnx.hpp  buffer_object_view.cpp  buffer_object_view.hpp  buffer_object_xrt_imp.cpp  buffer_object_xrt_imp.hpp  device_memory.cpp  device_memory_cloud.cpp  device_memory_cloud.hpp  device_memory_edge.cpp  device_memory_edge.hpp  dpcma_driver.h  dpu.h  version.c.in
buffer-object/test/: dump_op_weights.cpp  dump_op_weights_2.cpp  mem_read.cpp  mem_save.cpp  mem_write.cpp  parse_value.hpp  test_buffer_object.cpp
cmake/: VitisCommon.cmake  VitisVersion.cmake  butler-config.cmake  config.cmake.in  my_find_xrt.cmake  vitis_version.c.in
cpu-runner/: CMakeLists.txt
cpu-runner/config/: SIMCfg.txt  cl.sh  cmp.sh  config.txt  debug.sh
cpu-runner/include/: cpu_base_inc.hpp  cpu_cfg.hpp  cpu_dimension.hpp  cpu_helper.hpp  cpu_op_base.hpp  cpu_op_visitor.hpp  cpu_reg_func.hpp  cpu_runner.hpp  cpu_std_inc.hpp  cpu_tensor_buffer.hpp  cpu_tensor_utils.hpp  cpu_types.hpp  cpu_util.hpp  load_cfg.hpp
cpu-runner/src/: bfp_kernel.cpp  cpu_cfg.cpp  cpu_helper.cpp  cpu_op_base.cpp  cpu_reg_func.cpp  cpu_runner.cpp  cpu_tb_factory.cpp  cpu_tb_factory.hpp  cpu_tensor_buffer.cpp  cpu_util.cpp  error_code.cpp  load_cfg.cpp  op_schedule.hpp  op_state.cpp  op_state.hpp
cpu-runner/src/alg/: align_buf_mgr.hpp  conv_2_gemm.hpp  cpu_gemm.hpp  fast_pad.hpp  pair_hash.hpp  spin_lock.hpp
cpu-runner/src/api/: c_cpu_op_api.cpp  c_cpu_op_api.hpp  c_cpu_runner_api.cpp  c_cpu_runner_api.hpp  c_xmodel_api.cpp  c_xmodel_api.hpp  store_mgr.hpp
cpu-runner/src/op/: argmax.cpp  argmax.hpp  argmin.cpp  argmin.hpp  avg_pool.cpp  avg_pool.hpp  binary_add.cpp  binary_add.hpp  binary_base.cpp  binary_base.hpp  binary_div.cpp  binary_div.hpp  binary_mul.cpp  binary_mul.hpp  binary_sub.cpp  binary_sub.hpp  bn.cpp  bn.hpp  cast.cpp  cast.hpp  channel_shuffle.cpp  channel_shuffle.hpp  concat.cpp  concat.hpp  concat_fix.cpp  concat_fix.hpp  const.cpp  const.hpp  conv1d_base.cpp  conv1d_base.hpp  conv2d.cpp  conv2d.hpp  conv2d_fix.cpp  conv2d_fix.hpp  conv3d_base.cpp  conv3d_base.hpp  conv_base.cpp  conv_base.hpp  copy.cpp  copy.hpp  (+204 more)
cpu-runner/src/sample/: example.cpp  example.hpp  user_runner.cpp  user_runner.hpp  xmodel_run_sample.cpp  xmodel_run_sample.hpp
cpu-runner/src/symbol/: symbol.py
cpu-runner/src/vis/: check_param_visitor.hpp  oplist_visitor.hpp  print_param_visitor.hpp  read_visitor.hpp  run_visitor.hpp  save_visitor.hpp  workload_visitor.hpp
cpu-runner/test/: CMakeLists.txt  bit8_2_bit4.cpp  glob_init.hpp  int2float.cpp  run_xmodel.cpp  sample_qlinear_conv.py
dpu-controller/: CMakeLists.txt
dpu-controller/runner-assistant/: CMakeLists.txt
dpu-controller/src/: dpu_cloud.hpp  dpu_control_xrt.cpp  dpu_control_xrt_cloud.cpp  dpu_control_xrt_cloud.hpp  dpu_controller.cpp  (+20 more)
dpu-runner/: CMakeLists.txt
dummy-runner/: CMakeLists.txt
mem-manager/: CMakeLists.txt
runner/: CMakeLists.txt
sim-runner/: CMakeLists.txt
sim-runner/config/: SIMCfg.txt
sim-runner/include/: SimCfg.hpp  sim_runner.hpp  sim_tensor_buffer.hpp
sim-runner/src/: sim_runner.cpp  sim_tensor_buffer.cpp
sim-runner/src/buffer/: Bank.cpp  Bank.hpp  Buffer.cpp  Buffer.hpp  DDR.cpp  DDR.hpp  DM.cpp  DM.hpp  bank_shell.hpp
sim-runner/src/conf/: ArchCfg.cpp  ArchCfg.hpp  SimCfg.cpp
sim-runner/src/inst/: Alu.cpp  Alu.hpp  AluAddr.cpp  AluAddr.hpp  AluInit.cpp  AluInit.hpp  CBLoad.cpp  CBLoad.hpp  Conv.cpp  Conv.hpp  ConvAddr.cpp  ConvAddr.hpp  ConvInit.cpp  ConvInit.hpp  DWInit.cpp  DWInit.hpp  DptWise.cpp  DptWise.hpp  Elew.cpp  Elew.hpp  ElewInit.cpp  ElewInit.hpp  End.cpp  End.hpp  InstFactory.cpp  InstFactory.hpp  InstTable.cpp  InstTable.hpp  Load.cpp  Load.hpp  Pool.cpp  Pool.hpp  PoolInit.cpp  PoolInit.hpp  Save.cpp  Save.hpp  Thd.cpp  Thd.hpp  general_util.cpp  general_util.h
sim-runner/src/inst/parser/: parse.py
sim-runner/src/inst/parser/python/: Field.py  GenInstTable.py  GenInstTableList.py  Inst.py  Root.py  Word.py  __init__.py  parse.py
sim-runner/src/inst/parser/xml/: dpuv2.xml  dpuv4e.xml  xv2dpu.xml  xv3dpu.xml  xvdpu.xml
sim-runner/src/inst/pub/: DumpBank.cpp  DumpBank.hpp  DumpDDR.cpp  DumpDDR.hpp  DumpDDRSlice.cpp  DumpDDRSlice.hpp  Helper.hpp  InstBase.cpp  InstBase.hpp  Layer.cpp  Layer.hpp  ReadInst.cpp  ReadInst.hpp
sim-runner/src/inst/xv2dpu/: Alu_CTRLPKT.cpp  Alu_PL.cpp  Conv_PL.cpp  Load_CTRLPKT.cpp  Load_PL.cpp  Save_CTRLPKT.cpp  Save_PL.cpp  simCfg.cpp  simCfg.hpp  simUtil.cpp  simUtil.hpp
sim-runner/src/inst/xv2dpu/alu_ctrlpkt/AIECfg/: AIE2Cfg.cpp  AIE2Cfg.hpp  Misc2Cfg.hpp  params.hpp
sim-runner/src/inst/xv2dpu/alu_ctrlpkt/Ops/: BaseOps.hpp  OpAvgp.hpp  OpDwconv.hpp  OpELEWA.hpp  OpELEWM.hpp  OpELEWS.hpp  OpMaxp.hpp  OpTest.hpp
sim-runner/src/inst/xv2dpu/alu_ctrlpkt/Util/: BaseDMA.hpp  BufDes.hpp  CoreCtrl.hpp  Util.hpp  fileio.hpp  genBD.hpp  log.h  math_op.cpp  math_op.hpp
sim-runner/src/inst/xv2dpu/load_ctrlpkt/inc/: cache.h  debug.h  def.h  load.h  save.h
sim-runner/src/inst/xv2dpu/load_ctrlpkt/src/: cache.cpp  debug.cpp
sim-runner/src/inst/xvdpu/: MECfg.hpp  MEUtil.cpp  MEUtil.hpp  meConv.cpp
sim-runner/src/util/: Calc.cpp  Calc.hpp  DumpOfstream.cpp  DumpOfstream.hpp  ErrorCode.cpp  FMapTypes.hpp  LoadCfg.cpp  LoadCfg.hpp  Targets.hpp  Util.cpp  Util.hpp  common.hpp
sim-runner/test/: CMakeLists.txt  Simulator.cpp  check.py  test_ArchCfg.cpp  test_buffer.cpp  test_helper.cpp  test_sim.cpp  test_sim_runner.cpp
softmax-runner/: CMakeLists.txt
softmax-runner-cpu/: CMakeLists.txt
trace/: CMakeLists.txt
util/: CMakeLists.txt
xrnn-runner/: CMakeLists.txt
xrt-device-handle/: CMakeLists.txt
(+278 files in other folders)
